--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <header class="bg-gray-900/80 backdrop-blur-sm fixed top-0 left-0 right-0 z-50">
             <div class="container mx-auto px-6 py-4 flex justify-between items-center">
                 <h1 class="text-2xl font-bold gallery-title text-white">Manish art Gallery</h1>
-                <nav class="hidden md:flex space-x-8 text-gray-300">
+                <nav class="hidden md:flex space-x-8 text-white">
                     <a href="#gallery" class="nav-link">Gallery</a>
-                    <a href="#artist" class="nav-link">The Artist</a>
+                    <a href="#artist" class="nav-link" >The Artist</a>
                     <a href="#contact" class="nav-link">Contact</a>
                 </nav>
                 <button class="md:hidden" id="menu-btn">
@@ -33,7 +33,7 @@
                 </button>
             </div>
             <!-- Mobile Menu -->
-            <div id="mobile-menu" class="hidden md:hidden px-6 pb-4 flex flex-col space-y-4">
+            <div id="mobile-menu" class="hidden md:hidden px-6 pb-4 flex flex-col text-white">
                  <a href="#gallery" class="hover:text-indigo-400 transition-colors">Gallery</a>
                  <a href="#artist" class="hover:text-indigo-400 transition-colors">The Artist</a>
                  <a href="#contact" class="hover:text-indigo-400 transition-colors">Contact</a>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="card-back p-6 rounded-lg flex flex-col justify-center">
                             <h4 class="text-2xl font-bold text-white gallery-title">Deadpool</h4>
-                            <p class="mt-4 text-gray-300">Made from vibrant and bold colours just like deadpool inspires you to be just as bold as him and make decision you are afraid to make.</p>
+                            <p class="mt-4 text-gray-300">Made from vibrant and bold colours just like deadpool. Inspires you to be just as bold as him and make decision you are afraid to make.</p>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="card-back p-6 rounded-lg flex flex-col justify-center">
                             <h4 class="text-2xl font-bold text-white gallery-title">Bookmarks</h4>
-                            <p class="mt-4 text-gray-300">Customised bookmarks for different genera of books we read.</p>
+                            <p class="mt-4 text-gray-300">Customised bookmarks for different genres of books we read.</p>
                         </div>
                     </div>
                 </div>
@@ -115,8 +115,7 @@
                         </div>
                         <div class="card-back p-6 rounded-lg flex flex-col justify-center">
                             <h4 class="text-2xl font-bold text-white gallery-title">Krishna ji</h4>
-                            <p class="mt-4 text-gray-300">कर्मण्येवाधिकारस्ते मा फलेषु कदाचन।
-मा कर्मफलहेतुर्भूर्मा ते सङ्गोऽस्त्वकर्मणि॥</p>
+                            <p class="mt-4 text-gray-300">"You have a right to perform your prescribed duties, but you are not entitled to the fruits of your actions. Never consider yourself the cause of the results of your activities, and never be attached to not doing your duty."</p>
                         </div>
                     </div>
                 </div>
@@ -152,7 +151,7 @@
                         </div>
                         <div class="card-back p-6 rounded-lg flex flex-col justify-center">
                             <h4 class="text-2xl font-bold text-white gallery-title">Roronoa Zoro</h4>
-                            <p class="mt-4 text-gray-300">This drawing took me many hours to make with dadication just like the disciplined character Zoro is.</p>
+                            <p class="mt-4 text-gray-300">This drawing took me many hours to make with dedication just like the disciplined character Zoro is.</p>
                         </div>
                     </div>
                 </div>
